--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,31 +1,19 @@
 name: CI
+
 on:
   push:
     branches:
-      - '*'
+      - master
   pull_request:
     branches:
-      - '*'
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+      - master
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  container:
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    container: blang/latex
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    
-    - name: latex cont
-      run: make docker
-
-    # Runs a single command using the runners shell
-#     - name: Run a one-line script
-#       run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-#     - name: Run a multi-line script
-#       run: |
-#         echo Add other actions to build,
-#         echo test, and deploy your project.
+    - name: install biber
+      run: apt-get update && apt-get install -y biber
+    - name: build pdf
+      run: make build
