--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - ci
+      - master
   pull_request:
     branches:
-      - ci
+      - master
 
 jobs:
   container:
